--- a/src/components/FilterJobs/index.css
+++ b/src/components/FilterJobs/index.css
@@ -38,3 +38,17 @@
   margin-top: -12px;
   background-color: #64748b;
 }
+
+@media screen and (max-width: 767px) {
+  .employment-container {
+    width: 100%;
+    align-items: flex-start;
+  }
+  .ul-employment {
+    margin-top: 5px;
+    margin-bottom: 25px;
+  }
+  .horiz {
+    border-color: #b6c5ff;
+  }
+}
