--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -34,18 +34,18 @@
 }
 
 .profile-logo {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
 }
 
 .profile-name {
   color: #6366f1;
-  font-size: 25px;
+  font-size: 20px;
 }
 
 .profile-bio {
   color: #2c364c;
-  font-size: 16px;
+  font-size: 14px;
   margin-top: 5px;
 }
 
@@ -154,4 +154,53 @@
 .search-button {
   background-color: transparent;
   border-width: 0px;
+}
+
+@media screen and (min-width: 768px) {
+  .sc1 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .jobs-bg-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .filter-jobs-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .sc2 {
+    display: none;
+    width: 100%;
+  }
+
+  .search-container {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  .profile-container {
+    border-radius: 15px;
+  }
+  .hori {
+    border-color: #b6c5ff;
+  }
+  .right-main-container {
+    width: 100%;
+    padding-left: 0px;
+  }
+  .jobs-failure-container {
+    height: fit-content;
+    font-size: 17px;
+  }
 }
